Fix spacing mostly. Add several style tweaks.
git-svn-id: https://repos.nextthought.com/svn/nti-svn/NextThoughtWebApp/trunk@60362 3dfb626b-079f-4ab1-a9f6-4654e5377508

--- a/src/main/resources/scss/_contacts.scss
+++ b/src/main/resources/scss/_contacts.scss
@@ -971,10 +971,8 @@ div.contact-buttons {
                             }
 
                             &.upload{
-                                &::after{
-                                    background: url('../images/icons-sba061eb9dd.png') no-repeat;
-                                    background-position: -132px -137px;
-                                }
+								cursor: pointer;
+								@include icon('edit-15-white', $left:auto, $top: 7px, $right: 6px);
                             }
                         }
 
@@ -1096,6 +1094,16 @@ div.contact-buttons {
                 textarea{
                     height: 100px;
                 }
+
+				&.locked{
+					@include icon('lock', $left:auto, $top: 13px, $right: 67px);
+					&::after{
+						position: absolute;
+						display: block;
+						content: '';
+
+					}
+				}
             }
         }
     }
